Switch to jdk.internal.misc.Unsafe, cleanup ReflectionUtils, add some documentation to ReflectionUtils